# hs24-mc2-noaahh

./: .gitignore  README.md  hpc_fs24_mc2_teil2.ipynb  part2.ipynb  pyproject.toml  requirements.txt
images/: components.md
profiling/implementations/: baseline.py  baseline_improved.py  multiple.py  shared_memory.py
profiling/profiles/: baseline.ncu-rep  baseline.nsys-rep  baseline_improved.ncu-rep  baseline_improved.nsys-rep  shared_memory.ncu-rep
resources/: NumbaExamplePAC.ipynb  Profile_Example_CUDA.ipynb
results/: experiment_results.csv  part1_rec_errors  part1_rec_exec_times
utils/: experiments.py
