[project]
name = "hpc-mc2"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Noah", email = "thenoahleuenberger@gmail.com" }
]
dependencies = [
    "imageio>=2.35.1",
    "numba>=0.60.0",
    "matplotlib>=3.9.2",
    "scikit-image>=0.24.0",
    "ipykernel>=6.29.5",
    "nibabel>=5.2.1",
    "cupy-cuda11x>=13.3.0",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "jupytext>=1.16.4",
]
